fix: error message

--- a/listing-detail.html
+++ b/listing-detail.html
@@ -68,7 +68,7 @@
                         <div class="d-flex justify-content-between align-items-start mb-3">
                             <div>
                                 <span class="badge bg-purple-light text-purple mb-2">Ing. Informática</span>
-                                <h1 class="h3 card-title">Apuntes completos de Programación II con ejemplos</h1>
+                                <h1 class="h3 card-title">Apuntes completos de Estructura de Computadores con ejemplos</h1>
                                 <div class="d-flex align-items-center">
                                     <div class="text-warning me-2">
                                         <i class="fas fa-star"></i>
@@ -84,13 +84,13 @@
                         </div>
                         
                         <h2 class="h5 mb-3">Descripción</h2>
-                        <p>Apuntes detallados con todos los temas de la asignatura de Programación II del segundo cuatrimestre del primer curso de Ingeniería Informática. Incluye:</p>
+                        <p>Apuntes detallados con todos los temas de la asignatura de Estructura de Computadores del primer cuatrimestre del segundo curso de Ingeniería Informática. Incluye:</p>
                         <ul>
                             <li>Conceptos teóricos explicados de forma clara y concisa</li>
                             <li>Ejemplos prácticos de cada tema</li>
                             <li>Ejercicios resueltos paso a paso</li>
                             <li>Consejos para los exámenes</li>
-                            <li>Trucos y buenas prácticas de programación</li>
+                            <li>Trucos y buenas prácticas de programación en Verilog</li>
                         </ul>
                         <p>Formato PDF de 85 páginas, bien estructurado y con índice para facilitar la búsqueda de información. Estos apuntes me ayudaron a sacar un 9.2 en la asignatura.</p>
                         
