--- a/marketplace.html
+++ b/marketplace.html
@@ -165,7 +165,7 @@
                           </div>
                       </div>
                       <div class="card-footer bg-white border-top-0">
-                          <a href="listing-detail.html" class="btn btn-outline-primary w-100">Ver detalles</a>
+                          <a class="btn btn-outline-primary w-100">Ver detalles</a>
                       </div>
                   </div>
               </div>
@@ -192,7 +192,7 @@
                           </div>
                       </div>
                       <div class="card-footer bg-white border-top-0">
-                          <a href="listing-detail.html" class="btn btn-outline-primary w-100">Ver detalles</a>
+                          <a class="btn btn-outline-primary w-100">Ver detalles</a>
                       </div>
                   </div>
               </div>
