fix: error images

--- a/marketplace.html
+++ b/marketplace.html
@@ -130,7 +130,7 @@
                             <p class="card-text text-muted small mb-3">⭐ 4.8 (12 valoraciones) • Publicado hace 2 días</p>
                             <p class="card-text">Apuntes detallados con todos los temas de la asignatura, ejemplos prácticos y ejercicios resueltos. PDF de 85 páginas.</p>
                             <div class="d-flex align-items-center mt-3">
-                              <img src="https://via.placeholder.com/40" class="rounded-circle me-2" alt="Vendedor">
+                              <img src="img/perfil4.png" alt="Vendedora" class="rounded-circle me-3" style="width: 64px; height: 64px; object-fit: cover;">
                               <div>
                                   <p class="mb-0 fw-medium">Elena Sánchez</p>
                                   <p class="text-muted small mb-0">3° año Ing. Informática</p>
@@ -157,7 +157,7 @@
                           <p class="card-text text-muted small mb-3">⭐ 4.9 (25 valoraciones) • Disponible</p>
                           <p class="card-text">Clases personalizadas para reforzar los conceptos básicos y resolver ejercicios. Presencial o videollamada.</p>
                           <div class="d-flex align-items-center mt-3">
-                              <img src="https://via.placeholder.com/40" class="rounded-circle me-2" alt="Profesor">
+                              <img src="img/perfil6.png" class="rounded-circle me-3" alt="Profesor" style="width: 64px; height: 64px; object-fit: cover;>
                               <div>
                                   <p class="mb-0 fw-medium">Carlos Jiménez</p>
                                   <p class="text-muted small mb-0">Máster en Matemáticas</p>
@@ -184,7 +184,7 @@
                           <p class="card-text text-muted small mb-3">⭐ 4.7 (8 valoraciones) • Publicado hace 5 días</p>
                           <p class="card-text">Colección de exámenes de los últimos 4 años con soluciones paso a paso explicadas en detalle.</p>
                           <div class="d-flex align-items-center mt-3">
-                              <img src="https://via.placeholder.com/40" class="rounded-circle me-2" alt="Vendedor">
+                              <img src="img/perfil5.png" class="rounded-circle me-3" alt="Vendedor" style="width: 64px; height: 64px; object-fit: cover;>
                               <div>
                                   <p class="mb-0 fw-medium">Miguel Torres</p>
                                   <p class="text-muted small mb-0">Doctorando en Física</p>
