Actualizar listing-detail.html

--- a/listing-detail.html
+++ b/listing-detail.html
@@ -55,7 +55,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="marketplace.html">Marketplace</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Apuntes de Programación II</li>
+                <li class="breadcrumb-item active" aria-current="page">Apuntes de Estructura de Computadores</li>
             </ol>
         </nav>
 
