fix: page title

--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!--
 PONER QUE ESTA EN DESARROLLO
 -->
-<div style="text-align: center; padding: 20px; background-color: yellow; font-weight: bold;">
+<div style="text-align: center;"></div>
   Esta página está en desarrollo.
 </div>
