fix: some issues with img tags

--- a/listing-detail.html
+++ b/listing-detail.html
@@ -135,7 +135,7 @@
                         
                         <div class="mb-4 pb-4 border-bottom">
                             <div class="d-flex align-items-center mb-2">
-                                <img src="img/user_icon.png" class="rounded-circle me-2" alt="Usuario" style="width: 64px; height: 64px; object-fit: cover;>
+                                <img src="img/user_icon.png" class="rounded-circle me-2" alt="Usuario" style="width: 64px; height: 64px; object-fit: cover;">
                                 <div>
                                     <p class="mb-0 fw-medium">Pablo López</p>
                                     <div class="text-warning small">
@@ -154,7 +154,7 @@
                        
                         <div class="mb-4 pb-4 border-bottom">
                             <div class="d-flex align-items-center mb-2">
-                                <img src="img/user_icon.png" class="rounded-circle me-2" alt="Usuario" style="width: 64px; height: 64px; object-fit: cover;>
+                                <img src="img/user_icon.png" class="rounded-circle me-2" alt="Usuario" style="width: 64px; height: 64px; object-fit: cover;">
                                 <div>
                                     <p class="mb-0 fw-medium">María García</p>
                                     <div class="text-warning small">
