fix: some issues from chat

--- a/listing-detail.html
+++ b/listing-detail.html
@@ -210,11 +210,11 @@
                             </div>
                             <div class="chat-message chat-message-sent">
                                 <div class="small text-muted mb-1">Tú, 10:48</div>
-                                Hola Elena, me interesan tus apuntes de Programación II. ¿Incluyen todo lo que entra en el examen final?
+                                Hola Elena, me interesan tus apuntes de Estructura de Computadores. ¿Incluyen todo lo que entra en el examen final?
                             </div>
                             <div class="chat-message chat-message-received">
                                 <div class="small text-muted mb-1">Elena, 10:50</div>
-                                ¡Claro! Incluyen todos los temas del programa, con ejemplos prácticos y ejercicios tipo examen. También añadí algunos consejos que me dio el profesor.
+                                ¡Claro! Incluyen todos los temas de la asignatura, con ejemplos prácticos y ejercicios tipo examen. También añadí algunos consejos que me dio el profesor.
                             </div>
                             <div class="chat-message chat-message-sent">
                                 <div class="small text-muted mb-1">Tú, 10:52</div>
@@ -222,7 +222,7 @@
                             </div>
                             <div class="chat-message chat-message-received">
                                 <div class="small text-muted mb-1">Elena, 10:55</div>
-                                Una vez realizado el pago, recibirás el PDF por email de forma inmediata. También podemos quedar en la universidad si lo prefieres.
+                                Una vez realizado el pago, recibirás el PDF por email de forma inmediata. También podemos quedar en la ESIT si lo prefieres.
                             </div>
                         </div>
                         <form>
