feat: add legal conditions

--- a/faq.html
+++ b/faq.html
@@ -140,9 +140,9 @@
               <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                   <h5>Legal</h5>
                   <ul class="list-unstyled">
-                      <li><a href="#" class="text-white">Términos y condiciones</a></li>
-                      <li><a href="#" class="text-white">Política de privacidad</a></li>
-                      <li><a href="#" class="text-white">Política de cookies</a></li>
+                      <li><a href="legal/term-cond.html" class="text-white">Términos y condiciones</a></li>
+                      <li><a href="legal/pol-priv.html" class="text-white">Política de privacidad</a></li>
+                      <li><a href="legal/pol-cookies.html" class="text-white">Política de cookies</a></li>
                   </ul>
               </div>
           </div>
