--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
               <div class="form-check mb-3">
                 <input class="form-check-input" type="checkbox" id="terms" required />
                 <label class="form-check-label" for="terms">
-                  Acepto los <a href="#">términos y condiciones</a>
+                  Acepto los <a href="legal/term-cond.html">términos y condiciones</a>
                 </label>
               </div>
 
