fix: links pages

--- a/legal/term-cond.html
+++ b/legal/term-cond.html
@@ -20,14 +20,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="marketplace.html">Marketplace</a></li>
-          <li class="nav-item"><a class="nav-link" href="create-listing.html">Publicar</a></li>
-          <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="../marketplace.html">Marketplace</a></li>
+          <li class="nav-item"><a class="nav-link" href="../create-listing.html">Publicar</a></li>
+          <li class="nav-item"><a class="nav-link" href="../faq.html">FAQ</a></li>
         </ul>
         <div class="d-flex">
-          <a href="login.html" class="btn btn-outline-light me-2">Iniciar Sesión</a>
-          <a href="register.html" class="btn btn-light">Registrarse</a>
+          <a href="../login.html" class="btn btn-outline-light me-2">Iniciar Sesión</a>
+          <a href="../register.html" class="btn btn-light">Registrarse</a>
         </div>
       </div>
     </div>
@@ -86,9 +86,9 @@
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
           <h5>Enlaces</h5>
           <ul class="list-unstyled">
-            <li><a href="index.html" class="text-white">Inicio</a></li>
-            <li><a href="marketplace.html" class="text-white">Marketplace</a></li>
-            <li><a href="faq.html" class="text-white">Preguntas frecuentes</a></li>
+            <li><a href="../index.html" class="text-white">Inicio</a></li>
+            <li><a href="../marketplace.html" class="text-white">Marketplace</a></li>
+            <li><a href="../faq.html" class="text-white">Preguntas frecuentes</a></li>
             <li><a href="#" class="text-white">Contacto</a></li>
           </ul>
         </div>
