--- a/legal/pol-cookies.html
+++ b/legal/pol-cookies.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="../index.html">
         <img src="../img/logo_wullapop.png" alt="WULLapop Logo" height="30" class="d-inline-block align-text-top me-2 rounded" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
